# Auto-ETF-Backtesting-Forecasting-Platform

./: .gitignore  LICENSE  Makefile  README.md  analysis.py  app.py  config.py  dca.py  environment.yml  export.py  gitignore  main.py  plotting.py  prediction.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
legacy/: README.md
src/etf_dca/: __init__.py  benchmark.py  config.py  dca.py  performance.py  plotting.py  run.py
src/etf_dca/data/: __init__.py  prices.py
tests/: test_benchmark.py  test_dca.py  test_performance.py
